# openapi-spec-tools

./: CLI_GEN.md  DEVELOPMENT.md  LAYOUT.md  Makefile  OAS.md  README.md  TODO.md  client.mk  pyproject.toml
.github/actions/: test.yaml
.github/workflows/: lint.yaml  regenerate.yaml  test.yaml
examples/cloudtruth-gen-cli/: Makefile  README.md  ct.yaml  pyproject.toml
examples/cloudtruth-gen-cli/cloudtruth_gen_cli/: _arguments.py  _console.py  _display.py  _exceptions.py  _logging.py  _requests.py  _tree.py  audit.py  environments.py  environments_tags.py  grants.py  main.py  memberships.py  tree.yaml  users.py
examples/github/: Makefile  README.md  layout.yaml  pyproject.toml  trimmed.yaml
examples/github/github_gen_cli/: _arguments.py  _display.py  _exceptions.py  _logging.py  _requests.py  _tree.py  main.py  tree.yaml  users.py  users_blocks.py
examples/pets-cli/: Makefile  README.md  layout.yaml  pet.yaml  pyproject.toml
examples/pets-cli/pets_cli/: _arguments.py  _console.py  _display.py  _exceptions.py  _logging.py  _requests.py  _tree.py  main.py  tree.yaml
examples/pets-cli/tests/: helpers.py  test_console.py  test_display.py  test_exceptions.py  test_logging.py  test_main.py  test_requests.py  test_tree.py
oas_tools/: __init__.py  _typer.py  constants.py  oas.py  types.py  utils.py
oas_tools/cli_gen/: README.md  _arguments.py  _console.py  _display.py  _exceptions.py  _logging.py  _requests.py  _tree.py  cli.py  constants.py  generate.py  generator.py  layout.py  layout_types.py  requests.py  utils.py
openapi_spec_tools/: __init__.py  _typer.py  oas.py  types.py  utils.py
openapi_spec_tools/cli_gen/: _arguments.py  _console.py  _display.py  _exceptions.py  _logging.py  _requests.py  _tree.py  cli.py  constants.py  files.py  generate.py  generator.py  layout.py  layout_types.py  utils.py
tests/: conftest.py  helpers.py  test_cli_gen_display.py  test_cli_gen_logging.py  test_cli_gen_requests.py  test_cli_generate.py  test_cli_generator.py  test_cli_utils.py  test_layout_cli.py  test_layout_utils.py  test_oas.py  test_utils.py
tests/assets/: arg_test.py  bad.json  bad.yaml  bad_layout.yaml  ct_trimmed.yaml  layout_bad.yaml  layout_cloudtruth.yaml  layout_operationless.yaml  layout_pets.yaml  layout_pets2.yaml  layout_pets3.yaml  misc.yaml  noa_api.yaml  oas31.yaml  pet2.json  pet2.yaml  pet3.yaml  pets_and_vets.yaml  pets_layout.yaml  pets_layout2.yaml  tree_cloudtruth.yaml  tree_pets.yaml  trello_api.yaml
tests/cli_gen/: cli_output.py  helpers.py  test_cli.py  test_console.py  test_display.py  test_exceptions.py  test_files.py  test_generate.py  test_generator.py  test_layout_utils.py  test_logging.py  test_main.py  test_requests.py  test_tree.py  test_utils.py
