[project]
name = "oas-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Rick Porter",email = "rickwporter@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "typer (>=0.15.1,<0.16.0)"
]

[tool.poetry.scripts]
oas = "oas_tools.oas:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
