[project]
name = "oas-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Rick Porter",email = "rickwporter@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "typer (>=0.15.1,<0.16.0)"
]

[tool.poetry.scripts]
oas = "oas_tools.oas:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.2"
black = "^24.10.0"
coverage = "^7.6.10"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]

[tool.ruff.lint.isort]
force-single-line = true
split-on-trailing-comma = true

[tool.ruff.lint.pylint]
max-args = 25
max-branches = 12
max-returns = 10
max-statements = 75

[tool.ruff.lint.per-file-ignores]
# ignore the unused imports in init
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
