[project]
name = "cloudtruth-gen-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Rick Porter",email = "rickwporter@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "rich (>=14.0.0,<15.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
pytest = "^8.3.5"
black = "^25.1.0"
coverage = "^7.8.0"

[tool.poetry.scripts]
# this adds the main CLI function to allow calling directly from a shell
cloudtruth = "cloudtruth_gen_cli.main:app"

[tool.ruff]
line-length = 150

[tool.ruff.lint.isort]
force-single-line = true
split-on-trailing-comma = true

[tool.ruff.lint.pylint]
max-args = 25
max-branches = 12
max-returns = 10
max-statements = 75

[tool.ruff.lint.per-file-ignores]
"*.py" = [
    "F401", # unused-imports: for Enum and sub-commands without any operations
    "F811", # redefined: happens for enums
]
