[tool.poetry]
name = "github-gen-cli"
version = "0.1.0"
description = "Generated GitHub CLI based on OpenAPI spec and layout file"
authors = ["Rick Porter <rickwporter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.15.1"
rich = "^13.9.4"
requests = "^2.32.3"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# this adds the main CLI function to allow calling directly from a shell
gh-cli = "github_gen_cli.main:app"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"
black = "^25.1.0"
pytest = "^8.3.5"
coverage = "^7.8.0"
openapi-spec-tools = {path = "../..", develop = true}

[tool.ruff]
line-length = 250

[tool.ruff.lint.isort]
force-single-line = true
split-on-trailing-comma = true

[tool.ruff.lint.pylint]
max-args = 25
max-branches = 12
max-returns = 10
max-statements = 75

[tool.ruff.lint.per-file-ignores]
"*.py" = [
    "F401", # unused-imports: for Enum and sub-commands without any operations
    "F811", # redefined: happens for enums
]
