[tool.poetry]
name = "pets-cli"
version = "0.1.0"
description = "Generated CLI for Pets example service"
authors = ["Rick Porter <rickwporter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.15.1"
rich = "^13.9.4"
requests = "^2.32.3"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
pytest = "^8.3.5"
black = "^25.1.0"
coverage = "^7.8.0"

[tool.poetry.scripts]
# this adds the main CLI function to allow calling directly from a shell
pets = "pets_cli.main:app"

[tool.ruff]
line-length = 150

[tool.ruff.lint.isort]
force-single-line = true
split-on-trailing-comma = true

[tool.ruff.lint.pylint]
max-args = 25
max-branches = 12
max-returns = 10
max-statements = 75

[tool.coverage.run]
data_file = ".coverage"
source = [
    "pets_cli",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
]

